Edit page revisions.

--- a/public/views/edit-item.html
+++ b/public/views/edit-item.html
@@ -25,27 +25,27 @@
 
             <div class="form-group" class="block">
               <label class="block">Brand</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specs.brand"/>
+              <input type="text" class="block ninety-percent" ng-model="obj.specifications.brand"/>
             </div>
 
             <div class="form-group" class="block">
               <label class="block">Model No.</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specs.model"/>
+              <input type="text" class="block ninety-percent" ng-model="obj.specifications.model"/>
             </div>
 
             <div class="form-group" class="block">
               <label class="block">Colour</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specs.color"/>
+              <input type="text" class="block ninety-percent" ng-model="obj.specifications.color"/>
             </div>
 
             <div class="form-group" class="block">
               <label class="block">Size</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specs.size"/>
+              <input type="text" class="block ninety-percent" ng-model="obj.specifications.size"/>
             </div>
 
             <div class="form-group" class="block">
               <label class="block">Stock available</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specs.stock_available"/>
+              <input type="text" class="block ninety-percent" ng-model="obj.items_in_stock"/>
             </div>
 
             <div class="form-group" class="block">
@@ -55,22 +55,22 @@
 
             <div class="form-group" class="block">
               <label class="block">Sub-category</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.category"/>
+              <input type="text" class="block ninety-percent" ng-model="obj.sub_category"/>
             </div>
 
             <div class="form-group" class="block">
               <label class="block">Selling Price</label>
-              <input type="text" class="block ninety-percent" tooltip="Selling Price" ng-model="obj.price.sp"/>
+              <input type="text" class="block ninety-percent" tooltip="Selling Price" ng-model="obj.pricing.selling_price"/>
             </div>
 
             <div class="form-group" class="block">
               <label class="block">Cost Price</label>
-              <input type="text" class="block ninety-percent" tooltip="Cost Price" ng-model="obj.price.cp"/>
+              <input type="text" class="block ninety-percent" tooltip="Cost Price" ng-model="obj.pricing.cost_price"/>
             </div>
 
             <div class="form-group" class="block">
               <label class="block">Discount %</label>
-              <input type="text" class="block ninety-percent" tooltip="Happening discount..." ng-model="obj.price.discount"/>
+              <input type="text" class="block ninety-percent" tooltip="Happening discount..." ng-model="obj.pricing.discount"/>
             </div>
 
             <div class="form-group" class="block">
