--- a/public/views/edit-item.html
+++ b/public/views/edit-item.html
@@ -30,7 +30,7 @@
 
             <div class="form-group" class="block">
               <label class="block">Model No.</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specifications.model"/>
+              <input type="text" class="block ninety-percent" ng-model="obj.specifications.model_no"/>
             </div>
 
             <div class="form-group" class="block">
