--- a/public/views/add-Product.html
+++ b/public/views/add-Product.html
@@ -7,12 +7,12 @@
   <div class="left-section fifty-percent img-display">
     <img src="{{product.img}}" alt="{{product.alt}}" class="img-responsive"/>
 
-    <div class="image-roller">
+    <!-- <div class="image-roller">
       <img src="" alt=""/>
       <img src="" alt=""/>
       <img src="" alt=""/>
       <img src="" alt=""/>
-    </div>
+    </div> -->
   </div>
 
   <div class="right-section fifty-percent">
