--- a/public/views/edit-item.html
+++ b/public/views/edit-item.html
@@ -6,85 +6,84 @@
 
   <div class="left-section fifty-percent img-display">
     <img src="data:image/jpeg;base64, {{obj.image}}" alt="{{obj.alt}}" class="img-responsive"/>
-
+<!--
     <div class="image-roller">
       <img src="" alt=""/>
       <img src="" alt=""/>
       <img src="" alt=""/>
       <img src="" alt=""/>
     </div>
-  </div>
+  </div> -->
 
   <div class="right-section fifty-percent">
     <form class="inline">
+      <div class="form-group">
+        <label class="block">Name</label>
+        <input type="text" class="block ninety-percent" ng-model="obj.name"/>
+      </div>
 
-            <div class="form-group">
-              <label class="block">Name</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.name"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Brand</label>
+        <input type="text" class="block ninety-percent" ng-model="obj.specifications.brand"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Brand</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specifications.brand"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Model No.</label>
+        <input type="text" class="block ninety-percent" ng-model="obj.specifications.model_no"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Model No.</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specifications.model_no"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Colour</label>
+        <input type="text" class="block ninety-percent" ng-model="obj.specifications.color"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Colour</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specifications.color"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Size</label>
+        <input type="text" class="block ninety-percent" ng-model="obj.specifications.size"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Size</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.specifications.size"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Stock available</label>
+        <input type="text" class="block ninety-percent" ng-model="obj.items_in_stock"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Stock available</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.items_in_stock"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block"> Category</label>
+        <input type="text" class="block ninety-percent" ng-model="obj.category"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block"> Category</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.category"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Sub-category</label>
+        <input type="text" class="block ninety-percent" ng-model="obj.sub_category"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Sub-category</label>
-              <input type="text" class="block ninety-percent" ng-model="obj.sub_category"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Selling Price</label>
+        <input type="text" class="block ninety-percent" tooltip="Selling Price" ng-model="obj.pricing.selling_price"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Selling Price</label>
-              <input type="text" class="block ninety-percent" tooltip="Selling Price" ng-model="obj.pricing.selling_price"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Cost Price</label>
+        <input type="text" class="block ninety-percent" tooltip="Cost Price" ng-model="obj.pricing.cost_price"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Cost Price</label>
-              <input type="text" class="block ninety-percent" tooltip="Cost Price" ng-model="obj.pricing.cost_price"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block">Discount %</label>
+        <input type="text" class="block ninety-percent" tooltip="Happening discount..." ng-model="obj.pricing.discount"/>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block">Discount %</label>
-              <input type="text" class="block ninety-percent" tooltip="Happening discount..." ng-model="obj.pricing.discount"/>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block"> Description</label>
+        <textarea rows="12" class="block ninety-percent" ng-model="obj.details"></textarea>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block"> Description</label>
-              <textarea rows="12" class="block ninety-percent" ng-model="obj.details"></textarea>
-            </div>
+      <div class="form-group" class="block">
+        <label class="block"> Features</label>
+        <textarea rows="12" class="block ninety-percent" ng-model="obj.features"></textarea>
+      </div>
 
-            <div class="form-group" class="block">
-              <label class="block"> Features</label>
-              <textarea rows="12" class="block ninety-percent" ng-model="obj.features"></textarea>
-            </div>
-
-            <div class="block text-align-right ninety-percent" style="margin: 1px;">
-              <button type="reset" class="btn btn-warning twenty-percent">Cancel</button>
+      <div class="block text-align-right ninety-percent" style="margin: 1px;">
+        <button type="reset" class="btn btn-warning twenty-percent">Cancel</button>
         <button class="btn btn-primary twenty-percent" ng-click="updateItemInfo()">SAVE</button>
       </div>
     </form>
