--- a/public/directives/directives.less
+++ b/public/directives/directives.less
@@ -7,6 +7,10 @@ xor-item-snapshot{
     vertical-align: top;
   }
 
+  .description{
+    vertical-align: top;
+  }
+
   .item{
     margin: 1em;
     border-bottom: 2px solid @colorSuccess;
@@ -41,7 +45,7 @@ xor-product-card{
 
     img{
       height: 200px;
-      width: 200px;
+      width: 90%;
     }
 
     a{
