--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -82,7 +82,7 @@
 
 
   #topCarousel{
-    // margin: 0 auto;
+    margin: 30px auto;
 
     .image{
       width: 39% !important;
@@ -97,17 +97,16 @@
 
     .top-carousel-caption{
       color: #000 !important;
+      vertical-align: top;
     }
     .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
-        width: 70%;
-        height: 450px;
         margin: auto;
     }
 
     .item{
       img{
-        max-height: 300px;
+        height: 300px;
       }
     }
 
