--- a/public/app.less
+++ b/public/app.less
@@ -36,6 +36,10 @@
     a{
       cursor: pointer;
     }
+    i{
+      font-size: 15px !important;
+      margin-left: 5px !important;
+    }
 
     span{
       text-transform: capitalize;
