--- a/public/views/buyer-dashboard.html
+++ b/public/views/buyer-dashboard.html
@@ -19,35 +19,45 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox" ng-show="!!items.length">
           <div class="item active">
-            <img src="data:image/jpeg;base64,{{items[0].image}}" class="image img-responsive" alt="{{items[0].name}}" >
+            <div class="image inline-block">
+              <img src="data:image/jpeg;base64,{{items[0].image}}" class="img-responsive" alt="{{items[0].name}}" >
+            </div>
             <div class="top-carousel-caption">
               <h3>{{items[0].name}}</h3>
             </div>
           </div>
 
           <div class="item">
-            <img src="data:image/jpeg;base64,{{items[1].image}}" class="image img-responsive" alt="{{items[1].name}}">
+            <div class="image inline-block">
+              <img src="data:image/jpeg;base64,{{items[1].image}}" class="img-responsive" alt="{{items[1].name}}">
+            </div>
             <div class="top-carousel-caption">
               <h3>{{items[1].name}}</h3>
             </div>
           </div>
 
           <div class="item">
-            <img src="data:image/jpeg;base64,{{items[2].image}}" class="image img-responsive" alt="{{items[2].name}}">
+            <div class="image inline-block">
+              <img src="data:image/jpeg;base64,{{items[2].image}}" class="img-responsive" alt="{{items[2].name}}">
+            </div>
             <div class="top-carousel-caption">
               <h3>{{items[2].name}}</h3>
             </div>
           </div>
 
           <div class="item">
-            <img src="data:image/jpeg;base64,{{items[3].image}}" class="image img-responsive" alt="{{items[3].name}}">
+            <div class="image inline-block">
+              <img src="data:image/jpeg;base64,{{items[3].image}}" class="img-responsive" alt="{{items[3].name}}">
+            </div>
             <div class="top-carousel-caption">
               <h3>{{items[3].name}}</h3>
             </div>
           </div>
 
           <div class="item">
-            <img src="data:image/jpeg;base64,{{items[4].image}}" class="image img-responsive" alt="{{items[4].name}}">
+            <div class="image inline-block">
+              <img src="data:image/jpeg;base64,{{items[4].image}}" class="img-responsive" alt="{{items[4].name}}">
+            </div>
             <div class="top-carousel-caption">
               <h3>{{items[4].name}}</h3>
             </div>
