add to cart functionality added and also some styling changes for ui

--- a/public/app.less
+++ b/public/app.less
@@ -71,6 +71,7 @@
 @import 'less/signup.less';
 @import 'less/dashboard.less';
 @import 'less/add-edit-item.less';
+@import 'less/buyer-cart.less';
 @import 'directives/directives.less';
 // @import url(https://fonts.googleapis.com/css?family=Lovers+Quarrel);
 // @import url(https://fonts.googleapis.com/css?family=Sevillana);
