--- a/public/views/detailed-product-description.html
+++ b/public/views/detailed-product-description.html
@@ -90,4 +90,22 @@
     </div>
   </div>
 
+  <div id="notification-add-to-cart-failure" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Oooops..</h4>
+        </div>
+        <div class="modal-body">
+          <img src="data:image/jpeg;base64,{{obj.image}}" alt="{{obj.name}}" class="img-responsive margin-v" style="max-height: 600px"/>
+          <div class="margin-v">Something went wrong..</div>
+          <div class="margin-v">Please try after sometime.</div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal" data-target="#notification-add-to-cart-failure">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
