--- a/public/app.css
+++ b/public/app.css
@@ -343,15 +343,18 @@ body {
   border-top: 2px solid #D9EDF7;
 }
 .dashboard-content .items-display .heading {
-  width: 83%;
+  width: 75%;
   display: inline-block;
+  vertical-align: top;
 }
 .dashboard-content .items-display .heading h2 {
-  margin-left: 17%;
+  margin-left: 27%;
 }
 .dashboard-content .items-display .buttons {
-  width: 16%;
+  width: 24%;
   display: inline-block;
+  text-align: right;
+  padding-right: 3em;
 }
 .dashboard-content .items-display .add-new {
   margin: 20 20 10 0;
@@ -440,6 +443,32 @@ body {
 .dashboard-content #topCarousel .carousel-control .left {
   position: absolute !important;
 }
+@media (max-width: 1100px) {
+  .items-display .buttons {
+    padding-right: 1em !important;
+  }
+  .items-display .buttons button {
+    width: 45%;
+    margin-left: 1.5%;
+  }
+  .items-display .buttons span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+@media (max-width: 850px) {
+  .items-display .buttons {
+    padding-right: 1em !important;
+  }
+  .items-display .buttons button {
+    width: 45%;
+    margin-left: 2.5%;
+  }
+  .items-display .buttons span {
+    display: none;
+  }
+}
 @media (max-width: 600px) {
   .stats-display {
     margin: 0 auto !important;
@@ -467,6 +496,7 @@ body {
   }
   .items-display .buttons {
     width: 100% !important;
+    padding-right: 1em !important;
   }
   .items-display .buttons button {
     width: 45%;
@@ -532,7 +562,21 @@ xor-product-card .list-item-box a {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-@media (max-width: 600px) {
+@media (max-width: 850px) {
+  xor-item-snapshot button {
+    width: auto !important;
+    position: relative;
+    bottom: 1.8em;
+    left: 1em;
+  }
+  xor-item-snapshot button span {
+    display: none;
+  }
+}
+@media (max-width: 615px) {
+  xor-item-snapshot .item div:first-child {
+    display: block;
+  }
   xor-item-snapshot img,
   xor-item-snapshot .description {
     width: 100% !important;
