--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -10,17 +10,20 @@
     }
 
     .heading{
-      width: 83%;
+      width: 75%;
       display: inline-block;
+      vertical-align: top;
 
       h2{
-        margin-left: 17%;
+        margin-left: 27%;
       }
     }
 
     .buttons{
-      width: 16%;
+      width: 24%;
       display: inline-block;
+      text-align: right;
+      padding-right: 3em;
     }
 
     .add-new{
@@ -143,6 +146,46 @@
   }
 }
 
+
+
+@media (max-width: 1100px) {
+  .items-display{
+    .buttons{
+      padding-right: 1em !important;
+
+      button{
+        width: 45%;
+        margin-left: 1.5%;
+      }
+
+      span{
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+    }
+  }
+}
+
+
+@media (max-width: 850px) {
+  .items-display{
+    .buttons{
+      padding-right: 1em !important;
+
+      button{
+        width: 45%;
+        margin-left: 2.5%;
+      }
+
+      span{
+        display: none;
+      }
+    }
+  }
+}
+
+
 @media (max-width: 600px) {
   .stats-display {
     margin: 0 auto !important;
@@ -179,6 +222,8 @@
 
     .buttons{
       width: 100% !important;
+      padding-right: 1em !important;
+
 
       button{
         width: 45%;
