--- a/public/views/edit-item.html
+++ b/public/views/edit-item.html
@@ -83,7 +83,7 @@
       </div>
 
       <div class="block text-align-right ninety-percent" style="margin: 1px;">
-        <button type="reset" class="btn btn-warning twenty-percent">Cancel</button>
+        <!-- <button type="reset" class="btn btn-warning twenty-percent">Cancel</button> -->
         <button class="btn btn-primary twenty-percent" ng-click="updateItemInfo()">SAVE</button>
       </div>
     </form>
