--- a/public/views/merchant-dashboard.html
+++ b/public/views/merchant-dashboard.html
@@ -24,10 +24,10 @@
 
       <div class="buttons">
         <button class="btn btn-primary add-new margin-v" ng-click='addNewItem()'>
-          <i class="icon-plus"></i> Add New
+          <i class="icon-plus"></i><span> Add New </span>
         </button>
         <button class="btn btn-primary add-new" data-toggle="modal" data-target="#bulkItemUpload">
-          <i class="icon-plus"></i> Add Bulk
+          <i class="icon-importfile"></i><span> Add Bulk </span>
         </button>
       </div>
 
