--- a/public/less/sk_style.less
+++ b/public/less/sk_style.less
@@ -110,7 +110,7 @@
 @colorSuccess: #DFF0D8;
 
 @fontColorDanger: darken(@colorDanger, 20%);
-@fontColorWaning: darken(@colorWarning, 20%);
+@fontColorWarning: darken(@colorWarning, 20%);
 @fontColorInfo: darken(@colorInfo, 20%);
 @fontColorSuccess: darken(@colorSuccess, 20%);
 
