--- a/public/less/buyer-cart.less
+++ b/public/less/buyer-cart.less
@@ -1,5 +1,82 @@
 .cart-content{
   .container{
-      
+    margin: 1% 5%;
+
+    .empty-cart{
+      width: auto;
+      background-color:   red;  //darken(@fontColorDanger, 10%);
+      color: #FFF;
+      padding: 10px;
+      border-radius: 10px;
+      background: -webkit-linear-gradient(white, red); /* For Safari 5.1 to 6.0 */
+      background: -o-linear-gradient(white, red); /* For Opera 11.1 to 12.0 */
+      background: -moz-linear-gradient(white, red); /* For Firefox 3.6 to 15 */
+      background: linear-gradient(white, red); /* Standard syntax (must be last) */
+
+
+
+     span{
+       font-size: 1.5em;
+     }
+
+     p{
+       font-weight: 100;
+       font-size: 1em;
+     }
+    }
+
+    .filled-cart{
+      width: auto;
+      background-color:   red;  //darken(@fontColorDanger, 10%);
+      color: #FFF;
+      padding: 10px;
+      border-radius: 10px;
+      background: -webkit-linear-gradient(white, green); /* For Safari 5.1 to 6.0 */
+      background: -o-linear-gradient(white, green); /* For Opera 11.1 to 12.0 */
+      background: -moz-linear-gradient(white, green); /* For Firefox 3.6 to 15 */
+      background: linear-gradient(white, green); /* Standard syntax (must be last) */
+    
+
+       span{
+         font-size: 1.5em;
+       }
+
+       p{
+         font-weight: 100;
+         font-size: 1em;
+       }
+      }
+
+
+    .obj{
+      margin: 1% 3%;
+      padding: 10px;
+      border-radius: 10px;
+      background-color: darken(@colorWarning, 10%);
+
+      div{
+        padding: 5px;
+        height: 100px;
+      }
+
+      .remove-button{
+        font-size: 1.7em;
+        color: #fff;
+        // color: darken(@fontColorDanger, 20%);
+      }
+
+      img{
+        max-height: 100px !important;
+      }
+
+      img.middle{
+          vertical-align: middle;
+      }
+
+      .item-display{
+        width: 90%;
+        display: inline-block;
+      }
+    }
   }
 }
