--- a/public/views/buyer-cart.html
+++ b/public/views/buyer-cart.html
@@ -1,20 +1,52 @@
 <div class="cart-content hundred-percent"  data-ng-controller="cartController">
   <div class="container ninety-percent">
     <!-- <xor-cart-content ng-repeat=""></xor-cart-content> -->
-    <div class="empty-cart">
-      <span>Greetings {{user_id}},</span>
-      <p>
-        Your cart is empty..
-      </p>
+    <div ng-if="cartIsEmpty">
+      <div class="empty-cart">
+        <span>Greetings {{username}},</span>
+        <p>
+          Your cart is empty..
+        </p>
+      </div>
     </div>
 
-    <div class="filled-cart">
-      <span>Greetings {{user_id}}</span>
-      <p>
-        Please checkout to receive the items early.
-      </p>
+    <div ng-if="!cartIsEmpty">
+      <div class="filled-cart">
+        <span>Greetings {{username}}</span>
+        <p>
+          Please checkout to receive the items early.
+        </p>
+      </div>
+
+      <div ng-repeat="item in cart.items track by $index" class="ninety-percent inline-block obj">
+
+        <div class="item-display">
+          <div class="forty-percent inline-block image">
+            <img class="middle img-responsive" height="100%" src="data:image/jpeg;base64,{{item.image}}" alt="{{item.name}}"/>
+          </div>
+
+          <div class="fifty-percent inline-block name">
+            <span>
+              {{item.name}}
+            </span>
+          </div>
+
+          <div class="ten-percent inline-block amount">
+            <span class="ten-percent inline-block">&#8377</span>
+            <span class="eighty-percent inline-block text-align-right">{{item.pricing.selling_price}}</span>
+          </div>
+        </div>
+
+        <button class="btn btn-danger ten-percent text-align-center">
+          <i class="icon-remove-sign remove-button"></i>
+        </button>
+
+      </div>
+
+      <div class="ninety-percent obj">
+        <h3 class="inline-block text-align-center eighty-percent">Total</h3>
+        <h4 class="inline-block text-align-right ten-percent">&#8377 {{cart.total}}</h4>
+      </div>
     </div>
-
-
   </div>
 </div>
