--- a/public/less/buyer-cart.less
+++ b/public/less/buyer-cart.less
@@ -35,7 +35,7 @@
       background: -o-linear-gradient(white, green); /* For Opera 11.1 to 12.0 */
       background: -moz-linear-gradient(white, green); /* For Firefox 3.6 to 15 */
       background: linear-gradient(white, green); /* Standard syntax (must be last) */
-    
+
 
        span{
          font-size: 1.5em;
@@ -69,8 +69,26 @@
         max-height: 100px !important;
       }
 
-      img.middle{
-          vertical-align: middle;
+      // img.middle{
+      //     vertical-align: middle;
+      // }
+
+      .name, .amount, button{
+        position: relative;
+        bottom: 10px;
+        vertical-align: baseline-middle;
+        vertical-align: -webkit-baseline-middle;
+        vertical-align: -moz-baseline-middle;
+      }
+
+      .name{
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      button{
+        bottom: 3.34em !important;
       }
 
       .item-display{
@@ -79,4 +97,22 @@
       }
     }
   }
+
+  .checkout{
+    float: right;
+    margin-right: 8%;
+  }
+}
+
+@media (max-width: 850px){
+  .amount{
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 625px){
+  .amount{
+    font-size: 14px;
+  }
+
 }
