--- a/public/views/buyer-cart.html
+++ b/public/views/buyer-cart.html
@@ -37,7 +37,7 @@
           </div>
         </div>
 
-        <button class="btn btn-danger ten-percent text-align-center">
+        <button class="btn btn-danger ten-percent text-align-center" ng-click="removeFromCart(item)">
           <i class="icon-remove-sign remove-button"></i>
         </button>
 
@@ -47,6 +47,43 @@
         <h3 class="inline-block text-align-center eighty-percent">Total</h3>
         <h4 class="inline-block text-align-right ten-percent">&#8377 {{cart.total}}</h4>
       </div>
+
+      <button class="btn btn-success checkout" ng-click="checkout()">Checkout</button>
     </div>
   </div>
+
+  <div id="notification-removed-from-cart" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Success..</h4>
+        </div>
+        <div class="modal-body">
+          <img src="data:image/jpeg;base64,{{obj.image}}" alt="{{obj.name}}" class="img-responsive margin-v" style="max-height: 600px"/>
+          <div class="margin-v">{{obj.name}} removed from cart successfully.</div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal" data-target="#notification-removed-from-cart">Thanks</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="notification-removed-from-cart-failure" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Oooops..</h4>
+        </div>
+        <div class="modal-body">
+          <div class="margin-v">Something went wrong..</div>
+          <div class="margin-v">Please try after sometime.</div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal" data-target="#notification-removed-from-cart-failure">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
