--- a/public/less/add-edit-item.less
+++ b/public/less/add-edit-item.less
@@ -4,8 +4,8 @@
   }
 
   img:first-child{
-    max-height: 400px;
-    width: 90%;
+    max-height: 800px;
+    min-height: 550px;
     margin: 0 auto;
   }
 }
@@ -18,4 +18,11 @@
 
 #cost_price{
   text-decoration: line-through;
+}
+
+#notification-add-to-cart{
+  img{
+    width: auto;
+    max-height: 600px;
+  }
 }
