--- a/public/app.less
+++ b/public/app.less
@@ -72,6 +72,7 @@
 @import 'less/dashboard.less';
 @import 'less/add-edit-item.less';
 @import 'less/buyer-cart.less';
+@import 'less/buyer-checkout.less';
 @import 'directives/directives.less';
 // @import url(https://fonts.googleapis.com/css?family=Lovers+Quarrel);
 // @import url(https://fonts.googleapis.com/css?family=Sevillana);
