--- a/public/less/add-edit-item.less
+++ b/public/less/add-edit-item.less
@@ -3,7 +3,7 @@
     vertical-align: top;
   }
 
-  img:first-child{
+  #img-product{
     max-height: 800px;
     min-height: 550px;
     margin: 0 auto;
@@ -23,6 +23,6 @@
 #notification-add-to-cart{
   img{
     width: auto;
-    max-height: 600px;
+    height: 400px !important;
   }
 }
