--- a/public/views/detailed-product-description.html
+++ b/public/views/detailed-product-description.html
@@ -3,7 +3,7 @@
 <div class="edit-item-content hundred-percent add-edit-info" id="product-details"  data-ng-controller="detailedProductViewController">
 
   <div class="left-section fifty-percent img-display margin-v">
-    <img src="data:image/jpeg;base64,{{obj.image}}" alt="{{obj.name}}" class="img-responsive margin-v"/>
+    <img src="data:image/jpeg;base64,{{obj.image}}" alt="{{obj.name}}" class="img-responsive margin-v" id="img-product"/>
 
     <!-- <div class="image-roller">
       <img src="" alt=""/>
