Adding some missing functionalities

--- a/public/views/add-Product.html
+++ b/public/views/add-Product.html
@@ -55,7 +55,7 @@
 
       <div class="form-group" class="block">
         <label class="block">Sub-category</label>
-        <input type="text" class="block ninety-percent" ng-model="product.category"/>
+        <input type="text" class="block ninety-percent" ng-model="product.sub_category"/>
       </div>
 
       <div class="form-group" class="block">
