Fixed add product.

--- a/public/views/add-Product.html
+++ b/public/views/add-Product.html
@@ -25,27 +25,27 @@
 
       <div class="form-group" class="block">
         <label class="block">Brand</label>
-        <input type="text" class="block ninety-percent" ng-model="product.specs.brand"/>
+        <input type="text" class="block ninety-percent" ng-model="product.specifications.brand"/>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Model No.</label>
-        <input type="text" class="block ninety-percent" ng-model="product.specs.model"/>
+        <input type="text" class="block ninety-percent" ng-model="product.specifications.model_no"/>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Colour</label>
-        <input type="text" class="block ninety-percent" ng-model="product.specs.color"/>
+        <input type="text" class="block ninety-percent" ng-model="product.specifications.color"/>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Size</label>
-        <input type="text" class="block ninety-percent" ng-model="product.specs.size"/>
+        <input type="text" class="block ninety-percent" ng-model="product.specifications.size"/>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Stock available</label>
-        <input type="text" class="block ninety-percent" ng-model="product.specs.stock_available"/>
+        <input type="text" class="block ninety-percent" ng-model="product.items_in_stock"/>
       </div>
 
       <div class="form-group" class="block">
@@ -60,17 +60,17 @@
 
       <div class="form-group" class="block">
         <label class="block">Selling Price</label>
-        <input type="text" class="block ninety-percent" tooltip="Selling Price" ng-model="product.price.sp"/>
+        <input type="text" class="block ninety-percent" tooltip="Selling Price" ng-model="product.pricing.selling_price"/>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Cost Price</label>
-        <input type="text" class="block ninety-percent" tooltip="Cost Price" ng-model="product.price.cp"/>
+        <input type="text" class="block ninety-percent" tooltip="Cost Price" ng-model="product.pricing.cost_price"/>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Discount %</label>
-        <input type="text" class="block ninety-percent" tooltip="Happening discount..." ng-model="product.price.discount"/>
+        <input type="text" class="block ninety-percent" tooltip="Happening discount..." ng-model="product.pricing.discount"/>
       </div>
 
       <div class="form-group" class="block">
