--- a/public/views/add-Product.html
+++ b/public/views/add-Product.html
@@ -87,7 +87,7 @@
 
       <div class="block text-align-right ninety-percent" style="margin: 1px;">
         <button type="reset" class="btn btn-warning twenty-percent">Cancel</button>
-        <button class="btn btn-primary twenty-percent" ng-click="addItem()">SAVE</button>
+        <button class="btn btn-primary twenty-percent" ng-click="addProduct()">SAVE</button>
       </div>
     </form>
   </div>
