--- a/public/views/add-Product.html
+++ b/public/views/add-Product.html
@@ -8,7 +8,7 @@
     <img src="{{product.img}}" alt="{{product.alt}}" class="img-responsive"/>
     <input class="btn btn-primary" type="file" file-model="myFile"/>
     <!--button ng-click="uploadFile()" data-dismiss="modal" data-target="#bulkItemUpload" class="btn btn-warning">Upload</button-->
-    
+
 
     <!-- <div class="image-roller">
       <img src="" alt=""/>
@@ -20,6 +20,7 @@
 
   <div class="right-section fifty-percent">
     <form class="inline">
+
       <div class="form-group">
         <label class="block">Name</label>
         <input type="text" class="block ninety-percent" ng-model="product.name"/>
@@ -87,9 +88,8 @@
 
       <div class="block text-align-right ninety-percent" style="margin: 1px;">
         <button type="reset" class="btn btn-warning twenty-percent">Cancel</button>
-        <button class="btn btn-primary twenty-percent" ng-click="addProduct()">SAVE</button>
+        <button class="btn btn-primary twenty-percent" ng-click="addItem()">SAVE</button>
       </div>
     </form>
   </div>
 </div>
-
