--- a/public/views/add-Product.html
+++ b/public/views/add-Product.html
@@ -86,6 +86,11 @@
         <textarea rows="12" class="block ninety-percent" ng-model="product.features"></textarea>
       </div>
 
+      <div class="form-group" class="block">
+        <label class="block"> Available in cities : </label>
+        <input type="text" class="block ninety-percent" ng-model="product.cities_for_delivery" tooltip="Enter city names separated by comma's."/>
+      </div>
+
       <div class="block text-align-right ninety-percent" style="margin: 1px;">
         <button type="reset" class="btn btn-warning twenty-percent">Cancel</button>
         <button class="btn btn-primary twenty-percent" ng-click="addItem()">SAVE</button>
